--- a/app/globals.css
+++ b/app/globals.css
@@ -2,32 +2,56 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
+
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
+    --background-start-rgb: 214, 219, 220;
+    --background-end-rgb: 255, 255, 255;
+    --background-base: oklch(16.1% 0.021 288.39);
+
+    --text-50: oklch(95.66% 0.007 286.27);
+    --text-100: oklch(91.31% 0.012 291.27);
+    --text-200: oklch(82.43% 0.025 290.95);
+    --text-300: oklch(73.33% 0.039 290.51);
+    --text-400: oklch(63.97% 0.054 289.89);
+    --text-500: oklch(54.33% 0.07 288.95);
+    --text-600: oklch(46.45% 0.058 289.02);
+    --text-700: oklch(38.22% 0.046 289.14);
+    --text-800: oklch(29.52% 0.032 289.34);
+    --text-900: oklch(20.12% 0.018 289.78);
+    --text-950: oklch(14.85% 0.011 294.2);
+
+    --background-50: oklch(95.41% 0.009 286.22);
+    --background-100: oklch(90.66% 0.02 292.12);
+    --background-200: oklch(81.04% 0.042 290.02);
+    --background-300: oklch(71.28% 0.065 289.73);
+    --background-400: oklch(61.21% 0.09 288.01);
+    --background-500: oklch(51.18% 0.113 286.05);
+    --background-600: oklch(43.67% 0.097 286.23);
+    --background-700: oklch(36.06% 0.076 287.01);
+    --background-800: oklch(27.92% 0.054 286.9);
+    --background-900: oklch(19.26% 0.03 289.38);
+    --background-950: oklch(14.48% 0.015 291.11);
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+        --background-start-rgb: 0, 0, 0;
+        --background-end-rgb: 0, 0, 0;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+    font-family: 'Inter', system-ui;
+    color: rgb(var(--foreground-rgb));
+    background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb)))
+        rgb(var(--background-start-rgb));
 }
 
 @layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+    .text-balance {
+        text-wrap: balance;
+    }
 }
